# musio

./: .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml
backend-spring/: pom.xml
backend-spring/src/main/resources/: application.yml
cli-java/: pom.xml
config/: musio.example.toml  musio.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api-client/: client.ts
frontend/src/app/: AppRouter.tsx  routes.ts
frontend/src/features/agent-chat/: AgentChatPanel.tsx  AgentEvents.tsx  AgentMessageList.tsx  MarkdownContent.tsx  SongCards.tsx  chatClient.ts  chatTypes.ts
frontend/src/features/musio-playlists/: MusioPlaylistDetail.tsx  MusioPlaylistsPage.tsx  musioPlaylistClient.ts
frontend/src/features/player/: LyricLine.tsx  PlayerControls.tsx  PlayerShell.tsx  PlayerSpectrum.tsx  ProgressBar.tsx  (+2 more)
frontend/src/shared/: api.ts  types.ts
packaging/: README.md
packaging/npm/: package.json
packaging/npm/scripts/: ensure-platform-package.js  verify-main-package.js
providers/qqmusic-python-sidecar/: Dockerfile  README.md  pyproject.toml  requirements.txt
providers/qqmusic-python-sidecar/app/: main.py  qqmusic_client.py  schemas.py
scripts/: dev-backend.sh  dev-frontend.sh  dev-sidecar.sh  dev.ps1  dev.sh  mvn-win-jdk21.sh  run-cli-win-jdk21.sh  stop-dev.sh
scripts/win/: start-backend-windows.ps1  start-frontend-windows.ps1  start-sidecar-windows.ps1  start-windows.ps1  stop-backend-windows.ps1  stop-frontend-windows.ps1  stop-sidecar-windows.ps1  stop-windows.ps1
(+204 files in other folders)
